samples/_failures_safe/1761655937_9c03a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1bbafc00.c: In function ‘main’:
./samples/SAFE/__tmp_1bbafc00.c:171: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_1bbafc00.c:170:5: error: expected declaration or statement at end of input
  170 |     for
      |     ^~~
